# feature-pipeline-quality

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: contract.json  features_bad.csv  features_good.csv
src/feature_pipeline_quality/: __init__.py  cli.py  validator.py
tests/: test_validator.py
