[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "feature-pipeline-quality"
version = "0.1.0"
description = "Contract checks for feature pipeline datasets"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Toni Anev"}]
keywords = ["data-quality", "mlops", "feature-store", "pipeline-validation"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers"
]

[project.scripts]
feature-pipeline-quality = "feature_pipeline_quality.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
